@@ -91,8 +91,11 @@ v0.6.0
 - Use release v1.8.1 of googletest for tests
 
 vX.Y.Z
-- [[Breaking ABI change]] Added support for ObjectManager and other standard D-Bus interfaces
+- [[Breaking ABI change]] Added full support for ObjectManager, Properties and other standard D-Bus interfaces (Reordering virtual functions in interface classes)
 - sdbus-c++ now can automatically download, build and incorporate libsystemd static library, which makes things pretty easy in non-systemd environments
+- Minor changes in generated proxy/adaptor code:
+  * renamed interfaceName to INTERFACE_NAME to avoid potential naming clashes
+  * signal emitting methods now begin with "emit" prefix and capitalized first letter of signal name
 - sdbus-c++ file organization has been adjusted to comply to de-facto OSS project standards
 - Build system improvements -- moving towards more modern CMake
 - Using googletest from master branch instead of v1.8.1 which has THREADS_PTHREAD_ARG issue when cross-compiling
